# gui-logger-server

./: Cargo.toml  rust-toolchain
src/: main.rs  webserver.rs  websocket.rs
web/: main.html
web/static/: elements.js  main.css  main.js
