[package]
name = "gui-logger-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
open = "5.0.0"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3.5"
